header is taking shape, navbar has space between and is aligned correctly

--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 body {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .main-header {
     width: 100%;
     background-color: #356B2E;
-    padding: 8px 16px;
+    padding: 10px 18px;
 
 }
 
@@ -15,18 +16,21 @@ body {
 
 .main-header > div {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .main-header_logo {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
+    
+    font-weight: bold;
+    font-size: 40px;
+    text-decoration: none;
 }
 
 .main-nav {
+    vertical-align: middle;
     display: inline-block;
     text-align: right;
-    width: calc(100% - 173px);
-    text-decoration: none;
+    width: calc(100% - 459px);    
 }
 
 .main-nav_items {
@@ -36,6 +40,7 @@ body {
 }
 
 .main-nav_item {
+    margin-left: 30px;
     display: inline-block;
 }
 
